Add Dockerfile and support for configurable BASE_URL
Introduce a Dockerfile for containerizing the application with a multistage build process. Update the server to use an environment variable, `BASE_URL`, for configurability, defaulting to "0.0.0.0:8080" if not set.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,9 +16,10 @@ test_rust:
   image: rust:alpine3.21
   script:
     - apk add musl-dev
-    - cargo --version
-    - rustc --version
-    - cargo clippy --fix --allow-dirty --all-targets
+    - rustup component add clippy
+    - rustup component add rustfmt
+    - cargo clippy --all-targets --all-features --workspace
+    - cargo fmt --check
     - cargo test --all-features
 
 build_docker_image:
